training/linuxtips-descomplicando-o-eks/nat_gateway.tf
resource "aws_nat_gateway" "main" {
  count = length(var.public_subnets)

  allocation_id = aws_eip.eip[count.index].id

  subnet_id = aws_subnet.public[count.index].id
tags = {
    Name = format("%s-%s", var.ngw_name, var.public_subnets[count.index].availability_zone )
}
}
